# python-packaging

./: .gitignore  .pre-commit-config.yaml  README.md
.github/workflows/: pypi.yml  slides.yml
calculate/: README.md  pyproject.toml
calculate-liam/: README.md  meta.yaml  pyproject.toml
calculate-liam/src/calculate_liam/: __init__.py  cli.py  stats.py
calculate-liam/test/: test_stats.py
calculate-minimal/: README.md  pyproject.toml
calculate-minimal/src/calculate/: __init__.py  stats.py
calculate/src/calculate/: stats.py
calculate/test/: test_stats.py
docs/: _config.yml  index.md
slides/: index.md  ssc.css
