[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "calculate-liam"
version = "0.0.1"
dependencies = ["click", "numpy"]
authors = [
  { name="Liam Keegan", email="liam@keegan.ch" },
]
description = "A simple package to flip a coin or roll dice"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.optional-dependencies]
test = ["pytest"]

[project.scripts]
flip-coin = "calculate_liam.cli:flip_coin_cli"
roll-dice = "calculate_liam.cli:roll_dice_cli"
