[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "calculate-liam"
version = "0.0.7"
dependencies = ["click", "numpy"]
authors = [
  { name="Liam Keegan", email="liam@keegan.ch" },
]
description = "An example package from the SSC Python Packaging course"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Github = "https://github.com/ssciwr/python-packaging"
Homepage = "https://ssciwr.github.io/python-packaging"

[project.optional-dependencies]
test = ["pytest"]

[project.scripts]
flip-coin = "calculate_liam.cli:flip_coin_cli"
roll-dice = "calculate_liam.cli:roll_dice_cli"
