[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "calculate-liam"
version = "0.0.10"
dependencies = ["click", "numpy"]
authors = [
  { name="Liam Keegan", email="liam@keegan.ch" },
]
license = "MIT"
license-files = ["LICENSE.md"]
description = "An example package from the SSC Python Packaging course"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

[project.urls]
Github = "https://github.com/ssciwr/python-packaging"
Homepage = "https://ssciwr.github.io/python-packaging"

[dependency-groups]
dev = ["pytest"]

[project.scripts]
flip-coin = "calculate_liam.cli:flip_coin_cli"
roll-dice = "calculate_liam.cli:roll_dice_cli"
